# askama-axum-rust-template

./: Cargo.toml
src/: main.rs  templates.rs
templates/: index.html  login.html
